--- a/app/styles/components/article.sass
+++ b/app/styles/components/article.sass
@@ -1,4 +1,5 @@
 .article
+    margin-top: $spacing-default
 
     &__headline
         letter-spacing: $spacing-extra-small
@@ -7,7 +8,4 @@
             @include text-shadow-medium
             color: $color-base
             text-align: center
-            font-size: 200%
-
-    &__p
-        font-size: 125%
+            font-size: $font-large
