--- a/app/styles/helpers/parameters.sass
+++ b/app/styles/helpers/parameters.sass
@@ -4,6 +4,8 @@ $color-base-text: white
 $color-transparent: rgba(255, 255, 255, 0)
 
 $font-default: 'Lato', sans-serif
+$font-base: 1.2rem
+$font-large: 2.4rem
 
 $width-medium: 60%
 
