--- a/app/styles/routes/all.sass
+++ b/app/styles/routes/all.sass
@@ -2,4 +2,6 @@ html,
 body
     @include mp-0
     background-color: $color-background
-    font-family: 'Lato', sans-serif
+    font:
+        family: 'Lato', sans-serif
+        size: $font-base
